[package]
name = "examples"
version = "0.1.0"
authors = ["mechiru <u9053u6d41@gmail.com>"]
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
google-authz = { version = "1.0.0-alpha.4", features = ["tonic"] }
# grpc + gcp
tonic = { version = "0.7", features = ["tls", "tls-webpki-roots"] }
prost = { version = "0.10" }
prost-types = { version = "0.10" }

[dependencies.'google-api-proto']
path = "../google-api-proto"
features = [
  "google-pubsub-v1",
  "google-spanner-admin-database-v1"
]

[[bin]]
name = "pubsub"
path = "src/pubsub.rs"

[[bin]]
name = "spanner"
path = "src/spanner.rs"
